Polishing of the main ViGIL paper and supplemental, split them into two files

--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -50,7 +50,7 @@ The CoGenT dataset contains:
 		CLEVR CoGenT B  & red / green / purple / cyan &   gray / blue / brown / yellow       &      any color  \\
 		\bottomrule
 	\end{tabular}
-	\caption{Colors/shapes combinations present in CLEVR, CoGenT-A and CoGenT-B datasets}
+	\caption{Colors/shapes combinations present in CLEVR, CoGenT-A and CoGenT-B datasets.}
 	\label{tab:cogent_conditions}
 \end{table}
 
@@ -62,7 +62,6 @@ In \tableref{tab:results_full} we present the full comparison between MAC and S-
 
 
 \begin{table}[!h]
-	\caption{CLEVR \& CoGenT accuracies for the MAC \& S-MAC models}
 	\centering
 	\begin{tabular}{ccccCcCc}
 		\toprule
@@ -119,6 +118,7 @@ In \tableref{tab:results_full} we present the full comparison between MAC and S-
 		&                             &                                         &       &         &                & CoGenT-B &    94.55       \\
 		\bottomrule
 	\end{tabular}
+	\caption{CLEVR \& CoGenT accuracies for the MAC \& S-MAC models.}
 	\label{tab:results_full}
 \end{table}
 
@@ -190,7 +190,7 @@ S-MAC &   &    &   &    & B Valid Full   &  78.71   \\
 
 		\bottomrule
 	\end{tabular}
-	\caption{Generalization capabilities of selected state-of-the-art models}
+	\caption{Generalization capabilities of selected state-of-the-art models.}
 	\label{tab:generalization_comparison}
 \end{table}
 
