--- a/2018_nips_vigil/nips_2018.sty
+++ b/2018_nips_vigil/nips_2018.sty
@@ -64,8 +64,7 @@
 \else
   \if@nipsfinal
     \newcommand{\@noticestring}{%
-      \@nipsordinal\/ Conference on Neural Information Processing Systems
-      (NIPS \@nipsyear), \@nipslocation.%
+      Visually Grounded Interaction and Language (ViGIL) Workshop, NIPS \@nipsyear, \@nipslocation.%
     }
   \else
     \newcommand{\@noticestring}{%
