--- a/2018_nips_vigil/mac.tex
+++ b/2018_nips_vigil/mac.tex
@@ -4,7 +4,7 @@
 	\vspace{-15pt}
 	\centering
 	\includegraphics[width=\textwidth]{img/mac_cell.pdf}
-	\caption{The MAC cell, reproduced on the basis of~\cite{hudson2018compositional}}
+	\caption{The MAC cell, reproduced on the basis of~\cite{hudson2018compositional}.}
 	\label{fig:mac_cell}
 	\vspace{-5pt}
 \end{wrapfigure}
