--- a/2018_nips_vigil/vigil_paper_main.tex
+++ b/2018_nips_vigil/vigil_paper_main.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 
-\usepackage{nips_2018}
+\usepackage[final]{nips_2018}
 
 \usepackage[T1]{fontenc}    % use 8-bit T1 fonts
 
@@ -89,6 +89,4 @@ We introduce a variant of the MAC model (Hudson and Manning, CVPR 2018) with a s
 \bibliographystyle{alpha}
 \bibliography{vigil_bibliography}
 
-\newpage
-\input{appendix}
 \end{document}
