Moved images to folder 'above'

--- a/2018_nips_vigil/mac.tex
+++ b/2018_nips_vigil/mac.tex
@@ -3,7 +3,7 @@
 \begin{wrapfigure}{r}[5pt]{0.4\textwidth}
 	\vspace{-15pt}
 	\centering
-	\includegraphics[width=\textwidth]{img/mac_cell.pdf}
+	\includegraphics[width=\textwidth]{../img/mac_cell.pdf}
 	\caption{The MAC cell, reproduced on the basis of~\cite{hudson2018compositional}.}
 	\label{fig:mac_cell}
 	\vspace{-5pt}
