--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -245,14 +245,14 @@ Following the evaluation of MAC on CoGenT-B, we built a tool which helped us vis
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{img/fail_mac_cogent_b_shape.png}
+	\includegraphics[width=\textwidth]{../img/fail_mac_cogent_b_shape.png}
 	\caption{The question reads as: \textit{There is a large gray thing that is on the right side of the big gray cylinder left of the large ball that is on the right side if the cyan rubber sphere; what is its shape?}}
 	\label{fig:fail_mac_shape}
 \end{figure}
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\textwidth]{img/fail_mac_cogent_b_color.png}
+	\includegraphics[width=\textwidth]{../img/fail_mac_cogent_b_color.png}
 	\caption{The question reads as: \textit{There is a tiny block behind the rubber thing that is right if the small brown rubber cylinder that is in front of the yellow metal cylinder; what color is it?}}
 	\label{fig:fail_mac_color}
 \end{figure}
