--- a/2018_nips_vigil/vigil_paper_main.tex
+++ b/2018_nips_vigil/vigil_paper_main.tex
@@ -87,6 +87,6 @@ We introduce a variant of the MAC model (Hudson and Manning, CVPR 2018) with a s
 
 \newpage
 \bibliographystyle{alpha}
-\bibliography{vigil_bibliography}
+\bibliography{../vigil_bibliography}
 
 \end{document}
