--- a/2018_nips_vigil/introduction.tex
+++ b/2018_nips_vigil/introduction.tex
@@ -6,11 +6,11 @@ Many approaches have been explored, such as modular networks, that combine modul
 
 Several VQA datasets have been proposed (e.g. DAQUAR~\cite{malinowski2014multi}, VQA~\cite{antol2015vqa}); nonetheless, these datasets contain several biases (e.g. unbalanced questions or answers) that are often exploited by systems during learning~\cite{goyal2017making}.
 The CLEVR dataset~\cite{johnson2017clevr} was designed to address these issues. The synthetic nature of its images \& questions enables detailed analysis of visual reasoning, and allows for variations, to test a particular ability such as generalization or transfer learning. One variation of CLEVR, called CoGenT (Compositional Generalization Test), measures whether models learn separate representations for color and shape instead of memorizing all possible combinations. 
-For details, see Appendix~A (all appendices in supplementary material).
+For details, see Appendix~A (all appendices are in the supplementary material).
 
 
 One of the most recent exciting models aiming at solving VQA is called Memory, Attention, and Composition (MAC)~\cite{hudson2018compositional}, which performs a sequence of attention-based reasoning operations. 
-though the performance of MAC has been proven, several questions arise:
+Although the performance of MAC has been proven, several questions arise:
 Does the model really learn relations between objects? 
 How does the model represent these relations in its reasoning steps? 
 Is the model representing concepts like objects attributes (shape, color, size)?
