--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -1,11 +1,11 @@
 \appendix
 
-\section{Description of datasets}
+\section{Description of the datasets}
 
-Most of the VQA datasets have strong biases. This allow models to learn strategies without reasoning about the visual input~\cite{Santoro2017ASN}.
+Most of the VQA datasets have strong biases. This allow models to learn strategies without reasoning on the visual input~\cite{Santoro2017ASN}.
 The CLEVR dataset~\cite{johnson2017clevr} was developed to address those issues and come back to the core challenge of visual QA which is testing reasoning abilities.
-CLEVR contains images of 3D-rendered objects; each image comes with a number of highly compositional questions that fall into different categories.
-Those categories fall into 5 classes of tasks: Exist, Count, Compare Integer, Query Attribute and Compare Attribute. 
+CLEVR contains images of 3D-rendered objects; each image comes with a number of highly compositional questions which fall into different categories.
+These categories are divided into 5 classes of tasks: Exist, Count, Compare Integer, Query Attribute and Compare Attribute. 
 The CLEVR dataset consists of:
 \begin{itemize}
 \item 	A training set of 70k images and 700k questions,
@@ -13,7 +13,7 @@ The CLEVR dataset consists of:
 \item	A test  set of 15k images and 150k questions about objects,
 \item	Answers, scene graphs and functional programs for all train and val images and questions.
 \end{itemize}
-Each object present in the scene, aside of position, is characterized by a set of four attributes:
+Each object present in the scene is characterized, aside its position, by a set of four attributes:
 \begin{itemize}
 \item 2 sizes: large, small,
 \item 3 shapes: square, cylinder, sphere,
@@ -23,18 +23,18 @@ Each object present in the scene, aside of position, is characterized by a set o
 resulting in 96 unique combinations.
 
 Along with CLEVR, the authors~\cite{johnson2017clevr} introduced  CLEVR-CoGenT (Compositional Generalization Test, CoGenT in short), with a goal of evaluating how well the models can generalize, learn relations and compositional concepts.
-This dataset is generated in the same way as CLEVR with two additional conditions.
+This dataset is generated in the same way as CLEVR, with two conditions.
 As shown in \tableref{tab:cogent_conditions}, in Condition A all cubes are gray, blue, brown, or yellow, whereas all cylinders are red, green, purple, or cyan; in Condition B cubes and cylinders swap color palettes.
-For both conditions spheres can be any colors.
+For both conditions, spheres can be of any colors.
 
 
 The CoGenT dataset contains:
 \begin{itemize}
 \item	Training set of 70,000 images and 699,960 questions in Condition A,
 \item	Validation set of 15,000 images and 149,991 questions in Condition A,
-\item	Test set of 15,000 images and 149,980 questions in Condition A (without answers),
+\item	Test set of 15,000 images and 149,980 questions in Condition A,
 \item	Validation set of 15,000 images and 150,000 questions in Condition B,
-\item	Test set of 15,000 images and 149,992 questions in Condition B (without answers),
+\item	Test set of 15,000 images and 149,992 questions in Condition B,
 \item	Answers, scene graphs and functional programs for all training and validation images and questions.
 \end{itemize}
 
@@ -58,7 +58,7 @@ The CoGenT dataset contains:
  \newpage
 \section{Full MAC and S-MAC comparison}
 
-In \tableref{tab:results_full} we present the full comparison between MAC and S-MAC models.
+In \tableref{tab:results_full}, we present the full comparison table between MAC and S-MAC models.
 
 
 \begin{table}[!h]
@@ -123,12 +123,12 @@ In \tableref{tab:results_full} we present the full comparison between MAC and S-
 \end{table}
 
  \newpage
-\section{Comparison of generalization capabilities}
+\section{Comparison of the generalization capabilities on CoGenT}
 
-In this section we present a comparison of our results on generalization capabilities with selected state-of-the-art models.
+In this section, we present a comparison of our results on generalization capabilities with selected state-of-the-art models.
 In particular, we focused on three papers reporting state-of-the-art accuracies, i.e. PG+EE~\cite{johnson2017inferring} FiLM~\cite{perez2017film} and TbD~\cite{mascharka2018transparency}.
 Deeper analysis of the papers revealed that it is likely that different authors used different sets for reporting the scores, which questions the correctness of the comparison.
-We find that the problem results from the fact that ground truth answers for the test sets are not provided along with these sets; thus researchers started to use subsets of the validation set for testing. 
+We find that the problem results from the fact that ground truth answers for the test sets are not provided along with these sets; thus subsets of the validation sets were sometimes used for testing. 
 The results of our research are presented in \tableref{tab:generalization_comparison}, where we shortened the names of the datasets.
 For instance, \textbf{A Test Full} means the use of the whole \textbf{CoGenT Condition A Test set}, whereas \textbf{B Valid 30k} indicates the use of 30.000 samples from \textbf{CoGenT Condition B Validation set}.
 Question marks indicate that the paper does not provide enough information; thus the indicated sets are the ones we assumed were used.
@@ -137,8 +137,8 @@ Question marks indicate that the paper does not provide enough information; thus
 	\centering
 	\begin{tabular}{cCcCcCc}
 		\toprule
-		Model & \multicolumn{2}{c}{Training} &    \multicolumn{2}{c}{Fine-tuning} &   \multicolumn{2}{c}{Test} \\		
-		\cmidrule{2-3} \cmidrule{4-5}\cmidrule{6-7}
+		Model & \multicolumn{2}{c}{Training} &    \multicolumn{2}{c}{Fine-tuning} &   \multicolumn{2}{c}{Test} & \multirow{2}{*}{Row} \\
+		\cmidrule{2-3} \cmidrule{4-5}\cmidrule{6-7}\cmidrule{7-8} 
 		(source)& CoGenT set & Acc [\%]  & CoGenT set & Acc [\%]  & CoGenT set~ & Acc [\%] \\
 		
 \midrule				
@@ -200,39 +200,39 @@ The PG+EE (Program Generator and Execution Engine)~\cite{johnson2017inferring} m
 a Program Generator constructing an explicit, graph-like representation of the reasoning process, and an Execution Engine executing that program and producing an answer. 
 Both modules are implemented by neural networks, and were trained using a combination of backpropagation and REINFORCE~\cite{williams1992simple}.
 
-The authors inform that in the first step they trained their models on Condition A, and tested them on both Condition A and Condition B. 
+The authors inform that in the first step they trained their models on Condition A, and tested them on both conditions. 
 Next, they fine-tuned these models on Condition B using 3K images and 30K questions, and again tested on both conditions.
 Sadly, it is not clear which sets they used for fine-tuning (as Condition B lacks a training set).
-Being the authors of the CLEVR and CoGenT datasets, it is possible that they generated specific sets, but did not share them publicly. Additionally, as they own the ground truth answers for the test sets, it is very likely that they reported the accuracies on both Condition A and Condition B test sets.
+Being the authors of the CLEVR and CoGenT datasets, it is possible that they generated specific sets. Additionally, as they own the ground truth answers for the test sets, it is likely that they reported the accuracies on both Condition A and Condition B test sets.
 
 \subsection{The FiLM model and training methodology}
 
 Feature-wise Linear Modulation (in short, FiLM)~\cite{perez2017film} is an optional enhancement of a neural network model.
 The idea is to influence the behavior of existing layer(s) by introducing feature-wise affine transformations which are conditioned on the input.
-A model composed of FiLM enhanced by a CNN and a GRU achieved state-of-the-art results on both CLEVR and CoGenT, showing improvement over the PG+EE model.
+A model composed of FiLM layers enhanced by a CNN and a GRU achieved state-of-the-art results on both CLEVR and CoGenT, showing improvement over the PG+EE model.
 
-A problem with the presented comparison is that the authors used different sets for collecting the results. In the paper, they indicate that the accuracy reported for Condition B after fine-tuning was obtained on the CoGenT Condition B Validation set, excluding the 30k samples that were used for fine-tuning.
+Nonetheless, they indicate in the paper that the accuracy reported for Condition B after fine-tuning was obtained on the CoGenT Condition B Validation set, excluding the 30k samples which were used for fine-tuning.
 This suggests that they probably reported scores for Condition A on the validation set.
 
 
 \subsection{The TbD model and training methodology}
 
 The TbD (Transparency by Design) network was introduced in~\cite{mascharka2018transparency}.
-TbD is composed out of a set of visual reasoning primitives relying on attention transformations, allowing the model to perform reasoning by composing  attention masks.
-The authors compare the accuracy of their model tested on CLEVR, alongside with several existing models, including the previously mentioned PG + EE, CNN + GRU + FiLM and MAC, and show improvement.
+TbD is composed of a set of visual reasoning primitives relying on attention transformations, allowing the model to perform reasoning by composing attention masks.
+The authors compare the accuracy of their model tested on CLEVR, alongside with several existing models, including the previously mentioned PG + EE, CNN + GRU + FiLM \& MAC, and show improvement.
 
-They also compare performance on CoGenT, comparing to PG+EE.
-Nonetheless, the description lacks an important information, which is the used sets for training, fine-tuning and testing. 
+They also compare their performance on CoGenT against PG+EE.
+Nonetheless, the description lacks information about the used sets for training, fine-tuning and testing. 
 They indicate that they used 3k images and 30k questions from the CoGenT Condition B for fine-tuning of their model, but do not mention from which set they took the samples.
 
 
 \subsection{Our MAC and S-MAC models and methodology}
 
-Due to the fact that test set targets for both CLEVR and CoGenT aren't publicly available, we decided to follow the approach proposed in~\cite{perez2017film} and split the CoGenT A Validation set.
-As a result we used 30k samples for fine-tuning and the remaining part for testing.
-When testing the model on CoGenT B, we used the whole validation set.
-In the experiments when we were using Validation B for fine-tuning, we did a similar operation.
-Aside, as we were using validation sets for testing, we also splitted the training set and used 90\% for training and the remaining 10\% for validation during training.
+Due to the fact that the test sets ground truth labels for both CLEVR and CoGenT aren't publicly available, we decided to follow the approach proposed in~\cite{perez2017film} and split the CoGenT B Validation set.
+As a result we used 30k samples for fine-tuning and the remaining ones for testing.
+When testing the model on CoGenT A, we used the whole validation set.
+
+Moreover, as we were using the validation sets for testing, we also splitted the training set and used 90\% for training and the remaining 10\% for validation during training.
 
 \newpage
 \section{Illustration of failures of MAC on CLEVR}
@@ -257,4 +257,4 @@ Following the evaluation of MAC on CoGenT-B, we built a tool which helped us vis
 	\label{fig:fail_mac_color}
 \end{figure}
 
-Those examples indicate that MAC did not correctly separate the concept of shape from the concept of color, but have a better understanding of the colors (as it found the object of interest in \fig{fig:fail_mac_shape} by its color). This could come from that fact that the shape \textit{sphere} is associated with all possible colors in the dataset. 
+These examples indicate that MAC did not correctly separate the concept of shape from the concept of color, but have a better understanding of the colors (as it found the object of interest in \fig{fig:fail_mac_shape} by its color). This could come from that fact that the shape \textit{sphere} is associated with all possible colors in the dataset. 
