Intro and reformatting

--- a/arxiv/datasets.tex
+++ b/arxiv/datasets.tex
@@ -27,17 +27,7 @@ As shown in \tableref{tab:cogent_conditions}, in Condition A all cubes are gray,
 For both conditions spheres can be any colors.
 
 
-The CoGenT dataset contains:
-\begin{itemize}
-\item	Training set of 70,000 images and 699,960 questions in Condition A,
-\item	Validation set of 15,000 images and 149,991 questions in Condition A,
-\item	Test set of 15,000 images and 149,980 questions in Condition A (without answers),
-\item	Validation set of 15,000 images and 150,000 questions in Condition B,
-\item	Test set of 15,000 images and 149,992 questions in Condition B (without answers),
-\item	Answers, scene graphs and functional programs for all training and validation images and questions.
-\end{itemize}
-
-\begin{table}[h!]
+\begin{table}[b!]
 	\centering
 	\begin{tabular}{cccc}
 		\toprule
@@ -52,3 +42,14 @@ The CoGenT dataset contains:
 	\caption{Colors/shapes combinations present in CLEVR, CoGenT-A and CoGenT-B datasets.}
 	\label{tab:cogent_conditions}
 \end{table}
+
+The CoGenT dataset contains:
+\begin{itemize}
+\item	Training set of 70,000 images and 699,960 questions in Condition A,
+\item	Validation set of 15,000 images and 149,991 questions in Condition A,
+\item	Test set of 15,000 images and 149,980 questions in Condition A (without answers),
+\item	Validation set of 15,000 images and 150,000 questions in Condition B,
+\item	Test set of 15,000 images and 149,992 questions in Condition B (without answers),
+\item	Scene graphs and functional programs for all training/validation images/questions.
+\end{itemize}
+
