--- a/arxiv/smac.tex
+++ b/arxiv/smac.tex
@@ -50,7 +50,7 @@ linear layer depending on $i$: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
     \end{align*}}
 \end{multicols}
 
-
+\vskip -1.0cm
 \noindent\textbf{Read and write units:}
 \begin{multicols}{2}
 	\noindent
@@ -79,7 +79,7 @@ As seen above, being noticeably simpler, the S-MAC obtains significant reduction
 Our experiments demonstrate that this gives us noticeable savings in the training time. However, since the computation time is also dominated by the position-aware layers in the control unit, as well as the input unit, the speedup is not as large as we desire.
 
 
-\begin{table}[!h]
+\begin{table}[!t]
 	\centering
 	\begin{tabular}{ccccCcCc}
 		\toprule
