--- a/arxiv/introduction.tex
+++ b/arxiv/introduction.tex
@@ -21,4 +21,10 @@ Second, we show that both models achieve comparable performance with zero-shot l
 Last, we illustrate using CoGenT-B that, without adequate care, fine-tuning can actually reduce a model's accuracy.
 
 The paper is organized as follows.
-In \sec{datasets} we ...
+In \sec{datasets} we digest into details of both CLEVR and CoGenT datasets, emphasizing their differences.
+Next, in \sec{models}) we present both MAC and S-MAC models and explain what motivated the formulation of equations for the latter.
+\sec{experiments} discusses the most important findings when using transfer learning on CLEVR and both versions of CoGenT.
+In order to facilitate the lecture we cherry-picked a subset of experiments -- the whole table with comparison of both MAC and S-MAC models when training/fine-tuning/testing MAC and S-MAC models on different datasets can be found in Appendix A.
+Additionally, in \sec{failures} we present examples that support our hypotheses on lack of disentanglement of concepts in both models.
+\sec{comparison} presents 
+We conclude the paper in \sec{conclusion}.
