--- a/arxiv/mac.tex
+++ b/arxiv/mac.tex
@@ -7,7 +7,7 @@ The core of the model is the MAC cell, supported with an input unit that process
 The input unit  uses an LSTM~\cite{hochreiter1997long} to process the question in a word-by-word manner producing a sequence of \emph{contextual words} and a final \emph{question representation}.
 Besides, the input unit utilizes a pre-trained ResNet~\cite{he2016resnet} followed by two CNN layers to extract a feature map (referred to as \emph{knowledge base}) from the image.
 
-\begin{wrapfigure}{r}[5pt]{0.4\textwidth}
+\begin{wrapfigure}[10]{r}[5pt]{0.4\textwidth}
 	\vspace{-15pt}
 	\centering
 	\includegraphics[width=\textwidth]{../img/mac_cell.pdf}
